public/css/lo.css
/* ... */
.lo-body section.lo-section-half > * {
  flex: 1;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  color: var(--text-color-dark);
}

.lo-body .lo-container .lo-trade-section {
  margin: 15px 0;
}

.lo-trade-section legend {
  margin-bottom: 0.5rem;
  font-size: 16px;
  padding: 0;
}

.lo-container h3 {
  font-weight: normal;
  color: var(--text-color-dark);
  font-size: 20px;
  margin-top: 0;
  margin-bottom: 0.5rem;
}

.lo-container form label {
  margin-bottom: 0.5rem;
  display: block;
}

.lo-container select {
  font-size: 1em;
  padding: 0;
  width: 100%;
  border-radius: 5px;
  height: 35px;
  line-height: 1em;
  margin: 2px 0 15px;
  border: 1px solid var(--color-border);
}

/* ------------------------------ SUBSCRIBE GALLERY ------------------------------ */

.lo-body .lo-container.lo-image-gallery {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  height: auto;
  max-width: none;
  padding: 25px;
  margin: 25px;
  background-color: var(--color-link-light-hover);
  border-radius: 10px;
  box-sizing: border-box;
  border: 1px solid var(--color-border);
  box-shadow: rgb(0 0 0 / 18%) 0px 2px 4px;
  overflow: scroll;
}

.lo-body .lo-container.lo-image-gallery > figure {
  flex: 1;
  margin: 10px;
  height: fit-content;
  min-width: 250px;
}

.lo-body .lo-container.lo-image-gallery h3 {
  color: var(--text-color-dark);
}

.lo-body .lo-container.lo-image-gallery h3 {
  width: 100%;
  font-weight: normal;
  text-align: center;
}

.lo-body .lo-container.lo-image-gallery .img-thumbnail {
  padding: 0;
  border: none;
  border-radius: 10px;
  max-width: 100%;
  height: auto;
}

.lo-body .lo-container.lo-image-gallery figcaption {
  color: var(--text-color-light);
}

/* ------------------------------ RESOURCES CAROUSEL ------------------------------ */

.lo-body .lo-container.lo-container-carousel {
  max-width: fit-content;
  max-width: 900px;
  width: 900px;
}

.lo-container-carousel .carouselheader {
  margin: auto;
}

/* ------------------------------ RESOURCES CAROUSEL TWO ------------------------------ */

section.lo-section-main .carouselheader {
  margin: 0;
}

section.lo-section-main .carousel {
  margin: 0;
}

section.lo-section-main .carousel__nav {
  margin: 0;
}

section.lo-section-main .carousel__image {
  max-width: 300px;
}

/* ------------------------------ INDEX & FAVORITE LIST ------------------------------ */

.lo-body section.lo-section-half.lo-container {
  width: 95vw;
  padding: 0;
  min-width: 80vw;
  height: 700px;
}

.lo-list-text-side a {
  text-decoration: none;
  color: var(--logo-color);
}

.lo-list-text-side a:hover {
  color: var(--logo-color-hover);
  text-decoration: underline;
}

.lo-favorites-list {
  min-width: 480px;
  width: auto;
  min-height: 200px;
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.lo-basic-list li,
.lo-favorites-list li {
  cursor: pointer;
}

.lo-basic-list li,
.lo-in-depth-list li,
.lo-favorites-list li {
  list-style: none;
  position: relative;
  border: 0;
}

.lo-in-depth-list li {
  display: none;
}

.lo-in-depth-list li.show {
  display: block;
}

.lo-basic-list ul,
.lo-in-depth-list ul,
.lo-favorites-list ul {
  padding: 0;
}

.lo-body section.lo-section-half .lo-basic-list {
  border-right: 1px solid var(--color-border);
  border-radius: 0;
  overflow: scroll;
  height: 100%;
}

.lo-body section.lo-section-half .lo-in-depth-list {
  flex: 2;
  border-radius: 0;
  overflow: auto;
}

.lo-body section.lo-section-half .lo-in-depth-list h2 {
  font-size: 24px;
}

section.lo-section-half .lo-basic-list .lo-logo-wrapper,
section.lo-favorites-list .lo-logo-wrapper {
  width: 56px;
  height: 56px;
}

section.lo-section-half .lo-basic-list .lo-logo-wrapper.empty,
section.lo-favorites-list .lo-logo-wrapper.empty {
  background-color: var(--bg-color-dark);
}

section.lo-section-half .lo-in-depth-list .lo-logo-wrapper {
  margin: 10px 0;
  margin: 10px 15px 10px 0;
  width: 72px;
}

section.lo-section-half .lo-basic-list .lo-logo-wrapper img,
section.lo-section-half .lo-in-depth-list .lo-logo-wrapper img,
section.lo-favorites-list .lo-logo-wrapper img {
  width: 100%;
}

section.lo-section-half .lo-basic-list li a,
section.lo-favorites-list li a {
  display: flex;
  padding: 10px;
  text-decoration: none;
}

section.lo-section-half .lo-in-depth-list .lo-in-depth-list-top-info {
  display: flex;
  padding: 10px;
}

.lo-in-depth-list .lo-list-img-side {
  display: flex;
  align-items: center;
}

section.lo-section-half .lo-basic-list h6,
section.lo-favorites-list h6 {
  font-size: 16px;
  font-weight: bold;
  color: var(--logo-color);
  max-width: 95%;
}

section.lo-section-half .lo-basic-list li a,
section.lo-section-half .lo-in-depth-list li a,
section.lo-favorites-list li a {
  border: 0;
}

section.lo-section-half
  .lo-basic-list
  li
  a[aria-current]:not([aria-current="false"]),
section.lo-section-half .lo-basic-list li a:focus,
section.lo-section-half .lo-basic-list li a:hover,
section.lo-favorites-list li a:focus,
section.lo-favorites-list li a:hover {
  background-color: var(--logo-color-disabled);
}

section.lo-section-half .lo-in-depth-list li:hover,
section.lo-section-half .lo-in-depth-list li:focus {
  background-color: transparent;
}

section.lo-section-half .lo-basic-list li .lo-list-text-side,
section.lo-favorites-list li .lo-list-text-side {
  padding: 0 10px 10px 10px;
  border-bottom: 1px solid var(--color-border);
  width: 100%;
}

.lo-body .lo-list-text-side p,
section.lo-favorites-list .lo-list-text-side p {
  text-transform: capitalize;
  margin-bottom: 8px;
}

.lo-in-depth-list p {
  font-size: 14px;
  color: var(--text-color-dark);
}

#lo-search-empty h5,
.lo-basic-list .lo-list-text-side p:first-of-type,
section.lo-favorites-list .lo-list-text-side p:first-of-type {
  font-size: 14px;
  color: var(--text-color-dark);
}
/* ... */

